# NCKH_2026

./: .gitignore  .gitignore.txt  README.md
Hardware/CAD/Chan_Phai/: Right_Leg.SLDASM
Hardware/CAD/Chan_Trai/: Left_Leg.SLDASM
Hardware/CAD/Hong/: Hip.SLDASM
Hardware/CAD/Part/: Ln.SLDPRT  Lnp.SLDPRT  Lnt_.SLDPRT  MG996R Shaft.SLDPRT  MG996R.SLDPRT  Servo 9g.SLDPRT  Servo_MG996.SLDASM  bc.SLDPRT  bdct.SLDPRT  btc.SLDPRT  btp.SLDPRT  btt.SLDPRT  dcdc.SLDPRT  dp.SLDPRT  hdsvp.SLDPRT  hdsvt.SLDPRT  knsv.SLDASM  knsv_f.SLDPRT  knsv_fix.SLDPRT  kp3.SLDPRT  ktS.SLDPRT  ktc_1.SLDPRT  ktc_2.SLDPRT  ktc_3.SLDPRT  mSA.SLDPRT  mcc_1.SLDPRT  mcc_2.SLDPRT  mcc_3.SLDPRT  mh1.SLDPRT  mh2.SLDPRT  od.SLDPRT  po.SLDPRT  poa.SLDASM  trb.SLDPRT  uad.SLDPRT  vb_1.SLDPRT  vb_2.SLDPRT  vs.SLDPRT  vt.SLDPRT
Hardware/CAD/Robot/: Robot.SLDASM
Hardware/CAD/Robot/robot_humanoid/: package.xml
Hardware/CAD/Robot/robot_humanoid/config/: joint_names_robot_humanoid.yaml
Hardware/CAD/Robot/robot_humanoid/launch/: display.launch
Hardware/CAD/Robot/robot_humanoid/meshes/: ankle_ankle_right_link.STL  base_hip_left_link.STL  base_hip_middle_link.STL  base_hip_right_link.STL  base_link.STL  hip_head_link.STL  hip_hip_left_link.STL  hip_hip_right_link.STL  hip_knee_left_link.STL  hip_knee_right_link.STL  hip_shoulder_left_link.STL  hip_shoulder_right_link.STL  knee_ankle_left_link.STL  knee_ankle_right_link.STL  knee_knee_left_link.STL  shoulder_elbow_left_link.STL  shoulder_elbow_right_link.STL  shoulder_shoulder_left_link.STL  shoulder_shoulder_right_link.STL
Hardware/CAD/Robot/urdf/robot_humanoid/: CMakeLists.txt  package.xml
Hardware/CAD/Robot/urdf/robot_humanoid/launch/: gazebo.launch
Hardware/CAD/Robot/urdf/robot_humanoid/meshes/: ankle_ankle_right_link.STL  base_hip_left_link.STL  base_hip_middle_link.STL  base_hip_right_link.STL  base_link.STL  hip_head_link.STL  hip_hip_left_link.STL  hip_hip_right_link.STL  hip_knee_left_link.STL  hip_knee_right_link.STL  hip_shoulder_left_link.STL  hip_shoulder_right_link.STL  knee_ankle_left_link.STL  knee_ankle_right_link.STL  knee_knee_left_link.STL  shoulder_elbow_left_link.STL  shoulder_elbow_right_link.STL  shoulder_shoulder_left_link.STL  shoulder_shoulder_right_link.STL
Hardware/CAD/Robot/urdf/robot_humanoid/urdf/: robot_humanoid.csv  robot_humanoid.urdf
Hardware/CAD/Tay_Phai/: Right_Arm.SLDASM  Right_Hand.SLDASM
Hardware/CAD/Tay_Trai/: Left_Arm.SLDASM  Left_Hand.SLDASM
Hardware/CAD/Than/: Body.SLDASM
Software/Ros2_WS/: RL_TRAINING_GUIDE.md  gazebo.sh  init.bash  ppo.sh  rebuild.sh  run_rl_training.sh  rviz.bash
Software/Ros2_WS/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Software/Ros2_WS/install/ros2_pkg/share/ros2_pkg/urdf/: CMakeLists.txt  humanoid_physics.xacro  main.xacro  main_turbo.xacro  package.xml
Software/Ros2_WS/install/ros2_pkg/share/ros2_pkg/urdf/config/: joint_names_Robot.yaml
Software/Ros2_WS/install/ros2_pkg/share/ros2_pkg/urdf/launch/: display.launch  gazebo.launch
Software/Ros2_WS/install/ros2_pkg/share/ros2_pkg/urdf/meshes/: ankle_ankle_left_link.STL  ankle_ankle_right_link.STL  base_hip_left_link.STL  base_hip_middle_link.STL  base_hip_right_link.STL  base_link.STL  hip_head_link.STL  hip_hip_left_link.STL  hip_hip_right_link.STL  hip_knee_left_link.STL  hip_knee_right_link.STL  hip_shoulder_left_link.STL  hip_shoulder_right_link.STL  knee_ankle_left_link.STL  knee_ankle_right_link.STL  knee_knee_left_link.STL  shoulder_elbow_left_link.STL  shoulder_elbow_right_link.STL  shoulder_shoulder_left_link.STL  shoulder_shoulder_right_link.STL
Software/Ros2_WS/install/ros2_pkg/share/ros2_pkg/urdf/urdf/: Robot.csv  Robot.urdf  model.config
Software/Ros2_WS/log/: latest_build
Software/Ros2_WS/src/ros2_pkg/: CMakeLists.txt  best_policy.pt  package.xml
Software/Ros2_WS/src/ros2_pkg/launch/: ppo_train.launch.py  sim.launch.py  test_rl.launch.py  turbo.launch.py
Software/Ros2_WS/src/ros2_pkg/ros2_pkg/: export_onnx.py  rl_inference.py  rl_ppo_training.py  rl_training_node.py
Software/Ros2_WS/src/ros2_pkg/rviz/Rviz_robot_config/: Robot.rviz
Software/Ros2_WS/src/ros2_pkg/src/: imu_process_node.cpp  imu_sub_node.cpp  uvc_ik_node.cpp  uvc_node.cpp
Software/Ros2_WS/src/ros2_pkg/urdf/: humanoid_physics.xacro  main.xacro  main_turbo.xacro
Software/Ros2_WS/src/ros2_pkg/urdf/config/: joint_names_Robot.yaml
Software/Ros2_WS/src/ros2_pkg/urdf/meshes/: ankle_ankle_left_link.STL  ankle_ankle_right_link.STL  base_hip_left_link.STL  base_hip_right_link.STL  base_link.STL  hip_head_link.STL  hip_hip_left_link.STL  hip_hip_right_link.STL  hip_knee_left_link.STL  hip_knee_right_link.STL  hip_shoulder_left_link.STL  hip_shoulder_right_link.STL  knee_ankle_left_link.STL  knee_ankle_right_link.STL  knee_knee_left_link.STL  shoulder_elbow_left_link.STL  shoulder_elbow_right_link.STL  shoulder_shoulder_left_link.STL  shoulder_shoulder_right_link.STL
Software/Ros2_WS/src/ros2_pkg/urdf/urdf/: Robot.csv  Robot.urdf
Software/Ros2_WS/src/ros2_pkg/worlds/: turbo.sdf
Software/Ros2_WS/urdf/meshes/: shoulder_elbow_right_link.STL
Software/Ros2_WS/urdf/urdf/: Robot.csv
Software/install/: local_setup.sh  setup.sh
Software/log/: latest_build
(+56 files in other folders)
