<?xml version="1.0"?>
<package format="3">
  <name>robot_humanoid</name>
  <version>1.0.0</version>

  <description>
    URDF description package for robot_humanoid.
    This package contains configuration data, 3D models and launch files
    for the robot_humanoid robot.
  </description>

  <maintainer email="todo@email.com">TODO</maintainer>
  <license>BSD</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Gazebo (Jazzy uses Gazebo Harmonic / gz-sim) -->
  <exec_depend>gz_sim</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
